--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -10,7 +10,7 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-card *ngFor="let item of todoList" class="ion-margin">
+  <ion-card *ngFor="let item of todoList; let i=index" class="ion-margin">
     <ion-card-header>
       <ion-card-subtittle [style.color]="item.itemPriority === 'high' ? 'red' : (item.itemPriority === 'low' ? 'green' : 'orange')">
         {{item.itemCategory}}
@@ -38,7 +38,7 @@
         <p>Complete</p>
       </ion-item>
 
-      <ion-item>
+      <ion-item (click)="cancel(i)" >
         <ion-icon name="trash-outline"></ion-icon>
         <p>Cancel</p>
       </ion-item>
