--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -10,11 +10,9 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-card *ngFor="let item of todoList; let i=index" class="ion-margin">
+  <ion-card *ngFor="let item of todoList" class="ion-margin">
     <ion-card-header>
-      <ion-card-subtittle [style.color]="item.itemPriority === 'high' ? 'red' : (item.itemPriority === 'low' ? 'green' : 'orange')">
-        {{item.itemCategory}}
-      </ion-card-subtittle>
+
       <ion-item>
         <ion-icon *ngIf="item.itemPriority === 'high'" color="danger" size="small" name="ellipse"></ion-icon>
         <ion-icon *ngIf="item.itemPriority === 'low' " color="warning" size="small" name="ellipse"></ion-icon>
@@ -38,7 +36,7 @@
         <p>Complete</p>
       </ion-item>
 
-      <ion-item (click)="cancel(i)" >
+      <ion-item (click)="cancel(item._id)" >
         <ion-icon name="trash-outline"></ion-icon>
         <p>Cancel</p>
       </ion-item>
